<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="agreement" translatable="false">Пользовательское соглашение</string>
    <string name="view_to_share" translatable="false">https://practicum.yandex.ru/android-developer</string>
    <string name="view_to_support_address" translatable="false">khvishuk@yandex.ru</string>
    <string name="view_to_support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="view_to_support_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="view_to_agreement" translatable="false">https://yandex.ru/legal/practicum_offer</string>
    <string name="nothing_found" translatable="false">Ничего не нашлось</string>
    <string name="errors_with_link" translatable="false">Проблемы со связью \n \n
                 Загрузка не удалась. Проверьте подключение к интернету
    </string>
    <string name="reload" translatable="false">Обновить</string>
    <string name="search_before" translatable="false">Вы искали</string>
    <string name="clear_history" translatable="false">Очистить историю</string>
    <string name="time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="zero">00:00</string>
    <!-- descriptions-->
    <string name="description_BackToMain" translatable="false">BackToMain</string>
    <string name="description_ToShare" translatable="false">ToShare</string>
    <string name="description_GetSupport" translatable="false">GetSupport</string>
    <string name="description_ToAgreement" translatable="false">ToAgreement</string>
    <string name="description_Search" translatable="false">Search</string>
    <string name="description_Cross" translatable="false">Cross</string>
    <string name="description_To_Track" translatable="false">ToTrack</string>
    <string name="description_dote" translatable="false">Dote</string>
    <string name="description_track_image" translatable="false">TrackImage</string>
    <string name="description_search_message" translatable="false">Message</string>
    <string name="description_add_to_playlist" translatable="false">Добавить в плейлист</string>
    <string name="description_play" translatable="false">Играть</string>
    <string name="description_add_to_favourites" translatable="false">Добавить в избранное</string>
</resources>