<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    android:paddingStart="4dp"
    tools:ignore="RtlSymmetry">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/backToMain"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorSecondary"
            app:icon="@drawable/arrow_back"
            app:iconTint="?attr/colorOnSecondary"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6.5"
            android:padding="12dp"
            android:text="@string/settings"
            android:textColor="?attr/colorOnSecondary" />
    </LinearLayout>
    <LinearLayout
        style="@style/SettingsLinesStyle">
        <TextView
            android:text="@string/dark_theme"
            style="@style/SettingsTextStyle"
            android:layout_weight="8.5"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:thumb="@drawable/knob"
            android:track="@drawable/track"
            app:trackTint="?attr/colorPrimaryVariant"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck"
            style="@style/SettingsDrawableStyle"/>
    </LinearLayout>
    <LinearLayout
        style="@style/SettingsLinesStyle"
        tools:ignore="UseCompoundDrawables">
        <TextView
            android:text="@string/share"
            style="@style/SettingsTextStyle" />

        <ImageView
            android:contentDescription="@string/description_ToShare"
            android:src="@drawable/share"
            tools:ignore="ImageContrastCheck"
            style="@style/SettingsDrawableStyle"
            app:tint="?attr/colorSecondaryVariant"/>
    </LinearLayout>
    <LinearLayout
        style="@style/SettingsLinesStyle"
        tools:ignore="UseCompoundDrawables">
        <TextView
            android:text="@string/support"
            style="@style/SettingsTextStyle"/>

        <ImageView
            android:contentDescription="@string/description_GetSupport"
            android:src="@drawable/support"
            tools:ignore="ImageContrastCheck"
            style="@style/SettingsDrawableStyle"
            app:tint="?attr/colorSecondaryVariant"/>
    </LinearLayout>
    <LinearLayout
        style="@style/SettingsLinesStyle"
        tools:ignore="UseCompoundDrawables">
        <TextView
            android:text="@string/agreement"
            style="@style/SettingsTextStyle" />

        <ImageView
            android:contentDescription="@string/description_ToAgreement"
            android:src="@drawable/arrow_right"
            tools:ignore="ImageContrastCheck"
            style="@style/SettingsDrawableStyle"
            app:tint="?attr/colorSecondaryVariant"/>
    </LinearLayout>

</LinearLayout>