<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <TextView
        style="@style/TitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_marginBottom="8dp"
        android:padding="14dp"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/search"
            style="@style/MainButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/search"
            app:icon="@drawable/loop" />

        <Button
            android:id="@+id/media"
            style="@style/MainButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/media"
            app:icon="@drawable/media" />

        <Button
            android:id="@+id/settings"
            style="@style/MainButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/settings"
            app:icon="@drawable/settings" />
    </LinearLayout>

</LinearLayout>