<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backToMainFromSearch"
            style="@style/ArrowBackImageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/description_BackToMain"
            android:padding="16dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            style="@style/NotMainTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:text="@string/search" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:orientation="horizontal"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/search"
                android:src="@drawable/loop"
                app:tint="?attr/editTextColor" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="name"
                android:background="?attr/colorPrimaryVariant"
                android:hint="@string/search"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/searchText"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@null"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/cross"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/description_Cross"
                android:paddingHorizontal="8dp"
                android:src="@drawable/cross"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:id="@+id/search_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="102dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_error"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/text_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:textSize="19sp"
                android:textColor="?attr/colorOnSecondary"
                app:fontFamily="@font/ys_display_medium"
                android:textFontWeight="400"
                tools:text ="Error"/>

            <Button
                android:id="@+id/button_error"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:includeFontPadding="false"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:cornerRadius="54dp"
                android:letterSpacing="0"
                android:foreground="?attr/selectableItemBackground"
                android:backgroundTint="?attr/colorOnSecondary"
                android:textColor="?attr/colorSecondary"
                app:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"
                android:text="@string/reload"
                android:visibility="gone"/>
        </LinearLayout>

    </FrameLayout>
</LinearLayout>